feat: Swagger 어노테이션 추가, 헥사고날 아키텍쳐 리팩토링, JPA Auditing 추가 (대상: created_at, updated_at)